Fixed note delete button line wrapping

--- a/styles.css
+++ b/styles.css
@@ -184,6 +184,10 @@ h3 {
 .subMenuPastDue {
   color: red;
 }
+.taskNote{
+  display: inline;
+  
+}
 
 .taskHeaderElement{
   display: inline;
